/**
 * # Token Service
 * Block stream messages that report the results of transactions
 * handled by the `Token` service.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package com.hedera.hapi.block.stream.output;

// SPDX-License-Identifier: Apache-2.0
option java_package = "com.hedera.hapi.block.stream.output.protoc";
// <<<pbj.java_package = "com.hedera.hapi.block.stream.output">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "custom_fees.proto";

/**
 * Block Stream data for a `createToken` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message CreateTokenOutput {}

/**
 * Block Stream data for a `freezeTokenAccount` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message FreezeTokenAccountOutput {}

/**
 * Block Stream data for an `unfreezeTokenAccount` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message UnfreezeTokenAccountOutput {}

/**
 * Block Stream data for a `grantKycToTokenAccount` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message GrantTokenKycOutput {}

/**
 * Block Stream data for a `revokeKycFromTokenAccount` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message RevokeTokenKycOutput {}

/**
 * Block Stream data for a `deleteToken` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message DeleteTokenOutput {}

/**
 * Block Stream data for an `updateToken` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message UpdateTokenOutput {}

/**
 * Block Stream data for a `mintToken` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message MintTokenOutput {}

/**
 * Block Stream data for a `burnToken` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message BurnTokenOutput {}

/**
 * Block Stream data for a `wipeTokenAccount` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message WipeTokenAccountOutput {}

/**
 * Block Stream data for an `associateTokens` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message AssociateTokenOutput {}

/**
 * Block Stream data for a `dissociateTokens` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message DissociateTokenOutput {}

/**
 * Block Stream data for an `updateTokenFeeSchedule` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message UpdateTokenFeeScheduleOutput {}

/**
 * Block Stream data for a `pauseToken` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message PauseTokenOutput {}

/**
 * Block Stream data for an `unpauseToken` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message UnpauseTokenOutput {}

/**
 * Block Stream data for an `updateNfts` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message UpdateTokenNftsOutput {}

/**
 * Block Stream data for a `tokenAirdrop` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message TokenAirdropOutput {
  /**
   * Custom fees assessed during a TokenAirdrop.
   * <p>
   * These fees SHALL be present in the full transfer list for the transaction.
   */
  repeated proto.AssessedCustomFee assessed_custom_fees = 1;
}
